--- a/programs/magic-roulette/Cargo.toml
+++ b/programs/magic-roulette/Cargo.toml
@@ -19,4 +19,6 @@ idl-build = ["anchor-lang/idl-build"]
 
 [dependencies]
 anchor-lang = "0.31.1"
-
+ephemeral-vrf-sdk = { version = "0.2.0", features = ["anchor"] }
+num-derive = "0.4.2"
+num-traits = "0.2.19"
