Add permissioned tx route

--- a/app/.env.example
+++ b/app/.env.example
@@ -2,8 +2,10 @@ NEXT_PUBLIC_API_BASE_URL=
 NEXT_PUBLIC_FRONTEND_BASE_URL=
 NEXT_PUBLIC_SOLANA_RPC_CLUSTER=
 NEXT_PUBLIC_SOLANA_RPC_URL=
+NEXT_PUBLIC_FUNDED_KEYPAIR_PUBKEY=
 
 SOLANA_RPC_CLUSTER=
 SOLANA_RPC_URL=
 GATEWAY_URL=
 GATEWAY_API=
+FUNDED_KEYPAIR=
